# PhotoLense

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: mobilenetv3.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: classifier.rs  color.rs  exif.rs  filesystem.rs  image.rs  mod.rs
src-tauri/src/models/: classify_types.rs  exif_types.rs  fs_types.rs  histogram_types.rs  mod.rs
src-tauri/src/services/: color_service.rs  db.rs  exif_service.rs  fs_service.rs  mod.rs  thumbnail_service.rs  watcher.rs
src-tauri/src/services/classifier/: inference.rs  mod.rs  model_manager.rs
src/api/: commands.ts
src/components/AppToolbar/: AppToolbar.css  AppToolbar.tsx  PathInput.css  PathInput.tsx
src/components/ClassifyDialog/: ClassifyDialog.css  ClassifyDialog.tsx
src/components/ColorGroupDialog/: ColorGroupDialog.css  ColorGroupDialog.tsx
src/components/FileTree/: FileTree.css  FileTree.tsx  TreeNode.tsx
src/components/NotificationBell/: NotificationBell.css  NotificationBell.tsx
src/components/NotificationStack/: NotificationStack.css  NotificationStack.tsx
src/components/PhotoPanel/: ExifPanel.tsx  FileInfo.tsx  FindSimilarButton.tsx  GroupIndex.css  GroupIndex.tsx  Histogram.tsx  LazyThumbnail.tsx  Lightbox.tsx  (+7 more)
src/hooks/: useAppState.ts  useFileTree.ts  useNotifications.ts  usePhotos.ts
src/styles/: variables.css
src/types/: index.ts
(+10 files in other folders)
